# ai-engineering-pre-sessions

./: docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: PROMPT_MAESTRO.md
estimador-cag/: .env.example  README.md  pyproject.toml
estimador-cag/app/: config.py  main.py
estimador-cag/app/context/: examples.py
estimador-cag/app/routers/: estimations.py
estimador-cag/app/services/: llm_service.py
session_01/: sesion-01-ejercicios-alumno_1.ipynb
